# educational

./: .gitignore  AILP_EDUCATIONAL_ROADMAP.md  Advanced-Bash-Mastery-Guide.md  CONTRIBUTING.md  CRITICAL_ARIAXX_ALLOCATOR_OPTIMIZATION_PLAN.md  EDUCATIONAL_GUIDE_CHUNKING.md  EDUCATIONAL_TOOLS_COMPLETE.md  GEMINI_DEEP_RESEARCH_PROMPT.md  Linux-Multi-Tool-Workflow-Guide.md  Makefile  Makefile_enhanced  PERFORMANCE_ANALYSIS.md  PHASE_1_OPTIMIZATION_SUCCESS.md  PHASE_21_SUCCESS_REPORT_ARIAXX_READY.md  PHASE_2_ANALYSIS_LESSONS_LEARNED.md  PHILOSOPHY.md  RANDY_CHUNKING_CONCEPT_ANALYSIS.md  RANDY_MAJOR_PERFORMANCE_OPTIMIZATIONS.md  RANDY_PERFORMANCE_FLAGS.md  README.md  README_fast_allocator.md  README_new.md  REAL_WORLD_SUCCESS_SUMMARY.md  STACK_ACHIEVEMENT.md  TESLA_6D_CONSCIOUSNESS_ARCHITECTURE.md  TESLA_6D_CORE_MODEL_IMPLEMENTATION_PLAN.md  TESLA_ADAPTIVE_COOPERATIVE_INTELLIGENCE.md  TESLA_BIOLOGICAL_CONSCIOUSNESS_HIERARCHY.md  TESLA_CONSCIOUSNESS_BREAKTHROUGH_COMPLETE.md  TESLA_NANO_CONSCIOUSNESS_COMPLETE.md  TESLA_RULE_OF_3_ANALYSIS.md  VM16_IMPLEMENTATION_PLAN.md  ailp_chunked_educational_demo.c  allocator.c  allocator_benchmark  allocator_benchmark.c  allocator_optimized.c  allocator_phase2.c  allocator_phase21.c  allocator_phase21_simple.c  (+39 more)
9D-WaveProcessor/: README.md  build.zig  demo_device_specs.zig  demo_interactive.zig  demo_nonary.zig  demo_wave_processor.zig  device_specs.zig  nonary_embedder.zig  test_9d.zig  wave_processor_9d.zig
BitSet/: build.sh  makefile
allocator_inc/: allocator_phase21_simple.h  allocator_randy_chunked.h  sm_allocator.h  sm_allocator_cross_platform_sysmem.h  sm_allocator_enhanced.h  sm_allocator_phase2.h  sm_allocator_phase21.h  sm_allocator_sysmem.h
allocators/: README.md
any-type-poc/: README.md  any.js  any_demo.js
bash-bar-utils/: README.md  bar120.sh  bar80.sh
bash-math/: README.md  math.sh
bash-tui-utils/: README.md  repeat.sh  spinner.sh
beale-cipher-tool/: MAP_HYPOTHESIS.md  MAP_TESTING_GUIDE.md  README.md  beale_map_tester.py  beale_tester.py  cipher_data.py  map_extractor.py
binarySearch/: .gitignore  README.md  binfind.c  binfind.js  binfind.npk  binfind.py
build-your-own-git/: COMPLETION_GUIDE.md  PROJECT_STATUS.md  README.md
cognitive-firewall/: DESIGN.md  IDEAS.md  README.md  UI_SKETCHES.md  game.py
dbug-utility/: README.md  (+2 more)
saucer-snippet-manager/: CMakeLists.txt  README.md  build.sh
saucer-snippet-manager/frontend/: app.js  index.html  style.css
saucer-snippet-manager/src/: main.cpp  snippet_manager.cpp  snippet_manager.hpp
webview-snippet-manager/: CMakeLists.txt  README.md  build.sh
webview-snippet-manager/frontend/: index.html
webview-snippet-manager/src/: main.cpp  snippet_manager.cpp  snippet_manager.h
(+431 files in other folders)
